fix: compatible text and checkbox color for dark mode (#323)

--- a/stacks/spica/src/bucket/components/filter/filter.component.scss
+++ b/stacks/spica/src/bucket/components/filter/filter.component.scss
@@ -10,4 +10,7 @@
       min-width: unset !important;
     }
   }
+  .filter-buttons > button {
+    margin: 5px;
+  }
 }
